# car-dashboard-based-Linux

./: .gitignore  CMakeLists.txt  TODO.md  app_toolchain.cmake  frame.md  trans.sh
app/: CMakeLists.txt
app/led_turn/: CMakeLists.txt  app_led_turn.c
app/sim_test/: CMakeLists.txt  ui_sim.c
bsp/drivers/: CMakeLists.txt
bsp/drivers/bsp_gpio/: bsp_gpio_test.c  bsp_gpio_turn.c  bsp_gpio_turn.h
bsp/sim_test/: CMakeLists.txt  sensor_sim.c
component/log/: CMakeLists.txt  test.c
component/log/Src/: log.c  log.h
component/log/platform_adapt/: glibc_log_add.c  glibc_log_add.h
include/: gpio_turn.h
lvgl/: CMakeLists.txt  lv_conf.defaults  lv_conf.h  main.c  toolchain.cmake
lvgl/event/: event_cb.c  event_cb.h
lvgl/lvgl/src/drivers/: lv_drivers.h
lvgl/lvgl/src/drivers/display/drm/: lv_linux_drm.c
lvgl/src/: main.c
lvgl/src/hal/: hal.c  hal.h
lvgl/ui/: project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_include.h
lvgl/ui/screens/: ui_Screen1.c  ui_Screen1.h
